# Stage-A25-Zakary

./: .clang-format  .cmake-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_8md.html  Coding-Convention_8md.html  Coding-Tutorial_8md.html  Devlog_8md.html  Doxyfile  External-Tools_8md.html  FAQ_8md.html  Home_8md.html  MAINTAINERS.md  MAINTENANCE.md  Nomenclature_8md.html  Optimizations_8md.html  Packaging_8md.html  Project-Structure-_6-Architecture_8md.html  README.md  ____init_____8py.html  ____init_____8py.js  afterdoc_8h.html  afterdoc_8h_source.html  annotated.html  author_8cpp.html  autolink_8cpp.html  benchmark.py  bitops_8cpp.html  bitops_8cpp.js  bitops_8cpp__incl.map  bitops_8cpp__incl.md5  bitops_8h.html  bitops_8h__dep__incl.map  bitops_8h__dep__incl.md5  bitops_8h__incl.map  bitops_8h__incl.md5  bitops_8h_source.html  (+264 more)
.github/workflows/: black.yml  clang-format-check.yml  doxygen-gh-pages.yml  format
benchmarks/: hubbard.py  mapping_qiskit.py  mol_comparison.py  mol_main_pa_num.py  mol_old_pa_num.py  mol_pa_num.py  mol_pa_qiskit.py  mol_qiskit_num.py  simplify.py  sym.py
benchmarks/results/: main_pa_times.json  old_pa_times.json  pa_times.json  qiskit_times.json
bindings/: densepaulicpp_bindings.cpp  paulicpp_bindings.cpp  void_ops_bindings.cpp  voidops_bindings.cpp
densepaulicpp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dev/src/: pauliarray.hpp  sparsepauliarray.hpp  voidops.hpp
dev/src/bindings/: voidops_bindings.cpp
dev/stubs/: paulicpp.pyi
docs/doxygen-awesome-css/: doxygen-awesome-interactive-toc.js  header.html
docs/html/: Coding-Convention_8md.html  Coding-Tutorial_8md.html  Devlog_8md.html  External-Tools_8md.html  FAQ_8md.html  Home_8md.html  Nomenclature_8md.html  Optimizations_8md.html  Packaging_8md.html  Project-Structure-_6-Architecture_8md.html  ____init_____8py.html  bitops_8cpp.html  bitops_8cpp__incl.map  bitops_8cpp__incl.md5  bitops_8h.html  bitops_8h.js  bitops_8h__dep__incl.md5  bitops_8h__incl.map  bitops_8h_source.html  bitops_8py.html  bitops_8py.js  bitops__bindings_8cpp.html  cz2m_8cpp.html  cz2m_8cpp__incl.md5  cz2m_8h.html  cz2m_8h__dep__incl.map  cz2m_8h_source.html  cz2m_8py.html  cz2m_8py.js  cz2m__bindings_8cpp.html  cz2m__bindings_8cpp.js  cz2m__bindings_8cpp__incl.md5  dir_000001_000002.html  dir_000003_000002.html  dir_1e9df3e9ca0119e5dc244ca79a7d86f5.html  dir_1e9df3e9ca0119e5dc244ca79a7d86f5_dep.map  dir_1e9df3e9ca0119e5dc244ca79a7d86f5_dep.md5  dir_2b539ea9a43b4f64c08204dc0b04f11e.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_49e56c817e5e54854c35e136979f97ca.js  (+37 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  (+31 more)
docs/latex/: ____init_____8py.tex  bitops_8cpp.tex  bitops_8cpp__incl.md5  bitops_8h.tex  bitops_8h__dep__incl.md5  bitops_8h__incl.md5  bitops_8h_source.tex  bitops_8py.tex  bitops__bindings_8cpp.tex  bitops__bindings_8cpp__incl.md5  cz2m_8cpp.tex  cz2m_8cpp__incl.md5  cz2m_8h.tex  cz2m_8h__dep__incl.md5  cz2m_8h__incl.md5  cz2m_8h_source.tex  cz2m_8py.tex  cz2m__bindings_8cpp.tex  cz2m__bindings_8cpp__incl.md5  dir_1e9df3e9ca0119e5dc244ca79a7d86f5.tex  dir_1e9df3e9ca0119e5dc244ca79a7d86f5_dep.md5  dir_500325bf9fc2fd5917ed96a6c95c368d.tex  dir_9cfca51b01b71be24f299de05ff67983.tex  dir_c3516163d6726f560bacccc2a35077be.tex  dir_e43c62080a87aa442a704060800e1c08.tex  files.tex  md_CONTRIBUTING.tex  md_README.tex  namespacenewimport.tex  namespaces.tex  namespacez2r__accel.tex  namespacez2r__accel_1_1bitops.tex  namespacez2r__accel_1_1cz2m.tex  newimport_8py.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.tex  refman.toc
docs/wiki/: Coding-Convention.md  Coding-Tutorial.md  Devlog.md  External-Tools.md  FAQ.md  Home.md  Nomenclature.md  Optimizations.md  Packaging.md  Project-Structure-&-Architecture.md  coding-convention.md  coding-tutorial.md  devlog.md  external-tools.md  faq.md  home.md  nomenclature.md  optimizations.md  packaging.md  project-structure-and-architecture.md
local/: avancement.txt  bench_bitwise.py  bench_functions.py  bench_np_cdense_csparse.py  bench_np_cdense_pauli  bench_np_cdense_pauli.py  benchmark.py  benchmark_dpa.py  benchmark_np.py  hasher.py  main.py  mapping_sparse_chrono_pauliarray.py  sparsepauliarray.py  test  test.cpp  void_operations_comments.txt
local/results/: z_void_total_lengths.json
paulicpp/: CMakeLists.txt  compiler.py  pyproject.toml
paulicpp/pauliarray/: __init__.py
paulicpp/pauliarray/_src/: bitops.hpp  cz2m.hpp  sparsepaulicpp.hpp
paulicpp/pauliarray/_src/bindings/: bitops_bindings.cpp  cz2m_bindings.cpp  sparsepaulicpp_bindings.cpp
paulicpp/pauliarray/binary/: void_operations.py
paulicpp/pauliarray/pauli/: pauli_array.py  pcpp.py
paulicpp/pauliarray/src/: dpoint.hpp  pauliarray.hpp  paulicpp.hpp  setsparse.hpp  sparsepauliarray.hpp  sparsepaulicpp.hpp  voidops.hpp
paulicpp/pauliarray/src/bindings/: paulicpp_bindings.cpp  setsparse_bindings.cpp  sparsepaulicpp_bindings.cpp  voidops_bindings.cpp
paulicpp/pauliarray/stubs/: paulicpp.pyi  sparsepaulicpp.pyi  voidops.pyi
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  defines_0.js  defines_1.js  files_2.js  files_3.js  files_4.js  files_7.js  files_8.js  files_9.js  files_a.js  functions_0.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_7.js  functions_9.js  functions_a.js  (+28 more)
src/: densepauliarray.hpp  main.cpp  pauliarray.hpp  void_ops.hpp  voidops.hpp
src/bindings/: densepaulicpp_bindings.cpp  paulicpp_bindings.cpp
src/stubs/: voidops.pyi
stubs/: densepaulicpp.pyi  paulicpp.pyi  voidops.pyi
tests/: benchmark.py  benchmark_dpa.py  benchmark_np.py  main.py  test.py  test_cz2m.py  z2r_convert.py
z2r_accel/: __init__.py  bitops.py  cz2m.py
z2r_accel/_src/: bitops.hpp  cz2m.hpp
(+8 files in other folders)
