[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "z2r_accel"
version = "0.0.2"
description = "Efficient library to handle packed Z2 arrays"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.0",
    "pybind11",
    "pybind11-stubgen",
]
