[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pauliarray"
version = "0.1.0"
description = "projet"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pybind11",
    "mypy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
]
test = [
    "pytest",
    "numpy",
]