[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pauliarray"
version = "0.1.1"
description = "Efficient Pauli operators manipulation toolbox, with an optimied C++ backend."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pybind11",
    "pybind11-stubgen",
    "mypy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
]
test = [
    "pytest",
    "numpy",
]