[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pauliarray"
version = "0.1.1"
description = "Efficient Pauli operators manipulation toolbox, with an optimized C++ backend."
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.0",
    "pybind11",
    "pybind11-stubgen",
]
